# MyCroft-PlanToEatSkill

./: CHANGELOG.md  LICENSE.md  README.md  __init__.py  manifest.yml  plantoeatapi.py  pyproject.toml  settingsmeta.yaml  test.py
locale/en-us/: AddToList.intent  AddToList_failure.dialog  AddToList_success.dialog  AddTwoToList.intent  IsItemOnList.intent  IsItemOnList_no.dialog  IsItemOnList_yes.dialog  NotLoggedIn.dialog  RemoveFromList.intent  RemoveFromList_failure.dialog  RemoveFromList_success.dialog  RevealList.intent  RevealList_failure.dialog  RevealList_items.dialog  WhatIsForDinner.intent  WhatIsForDinner_failure.dialog  WhatIsForDinner_success.dialog  WhatIsOnList.intent  WhatIsOnList_noItems.dialog  WhatIsOnList_someItems.dialog
