[tool.poetry]
name = "plantoeat-skill"
version = "0.3.0"
description = "PlanToEat skill for MyCroft AI"
authors = ["Peter Lind <peter.e.lind@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
